fix some spacing issues

--- a/order-summary-card/style.css
+++ b/order-summary-card/style.css
@@ -15,7 +15,7 @@
   --dark-blue: hsl(223, 47%, 23%);
 
   --radius-md: 1rem;
-  --radius-lg: 1.5rem;
+  --radius-lg: 2rem;
 }
 
 html,
@@ -129,7 +129,6 @@ section {
   background-color: var(--very-pale-blue);
   border-radius: var(--radius-md);
   text-align: initial;
-  margin-block-end: 1rem;
 }
 
 section .txt {
@@ -142,6 +141,7 @@ section h2 {
 }
 
 .btn {
+  font-size: 1.4rem;
   padding: 1.25rem;
   border: none;
   background-color: transparent;
